# .emacs.d

./: .gitignore  .gitmodules  README.org  config.org  custom.el  init.el  projects
site-lisp/: hl7-mode.el  textexpander-sync.el
site-lisp/tla-mode-0.4/: ChangeLog  Makefile  Makefile.in  NEWS  README  TODO  config.status  configure  configure.in  easymenu.el  lpath.el  makeinfo.c  ref-card.tex  reporter.el  texinfo.tex  tla-mode.el  tla-mode.texi
snippets/coffee-mode/: debug  log
snippets/go-mode/: exampletest  println
snippets/html-mode/: div#  div.  etable  html  utf8  vwp
snippets/js2-mode/: 2js  debug  leetf  logd  logv
snippets/org-mode/: fb  pend  pull  test  times-new  trav
snippets/org-mode/freenome/: salesforce-fake  salesforcefake
snippets/python-mode/: leetf  pdbf  pprint  pprint_debug  pprint_import  prd
snippets/python-mode/hypothesis/: ihyp  note
