dnl This is an autoconf script.
dnl To rebuild the `configure' script from this, execute the command
dnl 	autoconf
dnl in the directory containing this script.  You must have autoconf
dnl version 1.9 or later.
dnl
dnl The following text appears in the resulting `configure' script,
dnl explaining how to rebuild it.
AC_REVISION($Id$)
AC_INIT
AC_AIX dnl this results in an autoconf warning; don't worry
AC_GCC_TRADITIONAL

dnl check for needed programs
dnl FKW_PROG_TEX

dnl checks for programs
AC_PROG_INSTALL
AC_PROGRAM_CHECK(EMACS, emacs, emacs, nil)
AC_PROGRAM_CHECK(TEX, tex, tex, nil)

dnl checks for header files
AC_HAVE_HEADERS(string.h sys/time.h unistd.h)
AC_STDC_HEADERS
AC_TIME_WITH_SYS_TIME
AC_ALLOCA

dnl create Makefiles
AC_OUTPUT(Makefile)
